--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "./src/app.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "nodemon",
+    "start:dev": "nodemon",
+    "start": "ts-node -r tsconfig-paths/register --transpile-only ./src/app.ts",
+    "start:prod": "npm run start",
     "test": "jest",
     "lint": "npm run lint:js ",
     "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
@@ -21,6 +22,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "moment": "^2.30.1",
+    "ts-node": "^10.9.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
